--- a/src/index.html
+++ b/src/index.html
@@ -21,5 +21,14 @@
 <body>
   <app-root></app-root>
 </body>
-
+<script>
+  var _hmt = _hmt || [];
+  (function() {
+    var hm = document.createElement("script");
+    hm.src = "https://hm.baidu.com/hm.js?0196f0af72bfc6799e634b44560c00ba";
+    var s = document.getElementsByTagName("script")[0]; 
+    s.parentNode.insertBefore(hm, s);
+  })();
+  </script>
+  
 </html>
