--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,7 @@
   <!-- add to homescreen for ios -->
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <meta name="apple-mobile-web-app-status-bar-style" content="black" />
+  <script src="https://res.wx.qq.com/open/js/jweixin-1.6.0.js"></script>
 </head>
 
 <body>
@@ -30,5 +31,4 @@
     s.parentNode.insertBefore(hm, s);
   })();
   </script>
-  
 </html>
